add Livro's delete method

--- a/web/Livro/frmLivroView.html
+++ b/web/Livro/frmLivroView.html
@@ -2,11 +2,12 @@
 
 <html>
     <head>
-        <title>TODO supply a title</title>
+        <title>Biblioteca - Cadastrar Livro</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
+        <h1>Cadastrar Livro</h1>
         <form action="addLivroAction.jsp" method="POST">
             <label>Nome</label><br/>
             <input type="text" name="nome" />
