--- a/web/index.html
+++ b/web/index.html
@@ -8,5 +8,7 @@
     </head>
     <body>
         <div>Java Web - Biblioteca</div>
+        <a href="/ProjetoBiblioteca/Livro/frmLivroView.html" >Adicionar Livro</a>
+        <a href="/ProjetoBiblioteca/Livro/listarLivro.jsp">Consultar Livros</a>
     </body>
 </html>
